[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyapunov"
version = "0.1.0"
description = "Compute Lyapunov exponents and Kaplan–Yorke dimension from time series data using polynomial reconstruction."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["chaos", "lyapunov", "nonlinear", "jitcode", "dynamics", "physics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "jitcode",
    "jitcsde"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lyapunov*"]
