[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyapunov"
version = "0.1.0"
description = "Compute Lyapunov exponents from time series data using polynomial reconstruction."
authors = [{ name = "Amir Hossein Movahedi", email = "movahedi.amirhossien@gamil.com.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["time series","chaos", "lyapunov", "nonlinear", "jitcode", "dynamics", "physics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "jitcode",
    "jitcsde"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["lyapunov*"]
